tests/bits-param/conflicting-repr.stderr
error: encountered conflicting `bits = 16` and #[repr(u32)] parameters
 --> $DIR/conflicting-repr.rs:3:1
  |
3 | #[bitfield(bits = 16)]
  | ^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: conflicting `bits = 16` here
 --> $DIR/conflicting-repr.rs:3:12
  |
3 | #[bitfield(bits = 16)]
  |            ^^^^

error: conflicting #[repr(u32)] here
 --> $DIR/conflicting-repr.rs:4:8
  |
4 | #[repr(u32)]
  |        ^^^
